--- a/kankasaur/kankasaur.fsproj
+++ b/kankasaur/kankasaur.fsproj
@@ -6,12 +6,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="JSONIO.fs" />
         <Compile Include="Campaigns.fs" />
-        <Compile Include="FSCli.fs" />
+        <Compile Include="Maps.fs" />
+        <Compile Include="argu.fs" />
         <Compile Include="Program.fs"/>
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Argu" Version="6.2.5" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
