--- a/JsonMarkerLoader/JsonMarkerLoader.fsproj
+++ b/JsonMarkerLoader/JsonMarkerLoader.fsproj
@@ -3,16 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <RootNamespace>MarkerLoader</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="argu.fs" />
         <Compile Include="Program.fs"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Argu" Version="6.2.5" />
-      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+        <Content Include="waterdeep_markers.json" />
     </ItemGroup>
 
     <ItemGroup>
